--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link href="./src/assets/main.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link href="./src/assets/main.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="/11.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Maksym Budiukin - Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
